--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,9 @@ body {
   font-size: 24px;
 }
 
+.nav-bar:hover {
+  color: var(--myCyan);
+}
 /* About Style */
 #about {
   display: flex;
@@ -50,6 +53,17 @@ body {
 #projects {
   display: flex;
   font-family: "Lato", sans-serif;
+}
+
+.project-img {
+  width: 90%;
+  margin: 0rem 2rem 2rem 2rem;
+  border: 2px solid var(--myBlue);
+  border-radius: 20px;
+}
+
+.project-img:hover {
+  border: 2px solid var(--myYellow);
 }
 
 /* Contact */
@@ -81,6 +95,14 @@ body {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
+}
+
+.link {
+  color: white;
+}
+
+.link:hover {
+  color: var(--myCyan);
 }
 
 /* .aside Style */
