--- a/assets/style.css
+++ b/assets/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 .project-img {
-  width: 90%;
+  width: 40%;
   margin: 0rem 2rem 2rem 2rem;
   border: 2px solid var(--myBlue);
   border-radius: 20px;
@@ -121,7 +121,8 @@ body {
 
 /* .bulk Style */
 .bulk {
-  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 /* Media Queries */
